--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -7,6 +7,7 @@ import Problems from "../../components/landing/Problems.astro";
 import Features from "../../components/landing/Features.astro";
 import DeepFeatures from "../../components/landing/DeepFeatures.astro";
 import Benefits from "../../components/landing/Benefits.astro";
+import Languages from "../../components/landing/Languages.astro";
 import Gallery from "../../components/landing/Gallery.astro";
 import WaitlistForm from "../../components/landing/WaitlistForm.astro";
 import Footer from "../../components/Footer.astro";
@@ -102,6 +103,7 @@ const t = useTranslations(currentLang);
 		<Features lang={currentLang} />
 		<DeepFeatures lang={currentLang} />
 		<Benefits lang={currentLang} />
+		<Languages lang={currentLang} />
 		<Gallery lang={currentLang} />
 		<WaitlistForm lang={currentLang} />
 		<Footer lang={currentLang} />
