--- a/src/components/landing/DeepFeatures.astro
+++ b/src/components/landing/DeepFeatures.astro
@@ -11,7 +11,10 @@ const { lang } = Astro.props;
 const t = useTranslations(lang);
 ---
 
-<section id="deep-features" class="py-24 relative">
+<section
+    id="deep-features"
+    class="py-12 md:py-24 relative bg-gray-50 dark:bg-gray-900/50"
+>
     <div class="container mx-auto px-6">
         <div class="text-center max-w-3xl mx-auto mb-20">
             <span
