--- a/src/components/landing/Languages.astro
+++ b/src/components/landing/Languages.astro
@@ -10,7 +10,7 @@ const { lang } = Astro.props;
 const t = useTranslations(lang);
 ---
 
-<section id="languages" class="py-24 relative bg-gray-50 dark:bg-gray-900/50">
+<section id="languages" class="py-12 md:py-24 relative bg-gray-50 dark:bg-gray-900/50">
     <div class="container mx-auto px-6">
         <div class="text-center max-w-3xl mx-auto mb-16">
             <h2
